--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 This utility monitors a particular folder and compiles all the .less files into css and saves them in the target folder specified. It also preserves the folder structure inside the specified source folder and creates a similar folder structure inside your target folder. 
 
-USAGE 
+USAGE (Requires node and less to be installed)
 lessw SOURCE_DIR TARGET_DIR
 
 Use -x if you want your output CSS to be minified.
+
